--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -24,6 +24,7 @@
     <string name="msg_restricted" formatted="false">%s تم تقيده بواسطة XPrivacy</string>
     <string name="msg_licensed" formatted="false">مرخص ل: %s</string>
     <string name="msg_loading">جاري التحميل</string>
+    <string name="msg_edit">Click the application icon to edit all restrictions</string>
     <string name="msg_done">إنتهى</string>
     <string name="restrict_accounts">الحسابات (قوقل , فيسبوك , الخ)</string>
     <string name="restrict_browser">المتصفح (العلامات,السجل)</string>
@@ -42,7 +43,6 @@
     <string name="restrict_shell">سطر الأوامر (الأوامر,المستخدم الجذر)</string>
     <string name="restrict_system">النظام (البرامج المنزلة)</string>
     <string name="restrict_view">تصفح (المتصفح)</string>
-    <string name="title_category">إختر الصنف للتقيد:</string>
     <string name="title_restrict">إختر للتقيد:</string>
     <string name="settings_expert">الوضع المتقدم</string>
     <string name="settings_lat">خط العرض</string>
