--- a/res/values-he/strings.xml
+++ b/res/values-he/strings.xml
@@ -24,6 +24,7 @@
     <string name="msg_restricted" formatted="false">%s מוגבל על ידי XPrivacy</string>
     <string name="msg_licensed" formatted="false">Licensed to: %s</string>
     <string name="msg_loading">Loading</string>
+    <string name="msg_edit">Click the application icon to edit all restrictions</string>
     <string name="msg_done">Done</string>
     <string name="restrict_accounts">חשבונות (גוגל, פייסבוק וכו)</string>
     <string name="restrict_browser">דפדן(מועדפים\היסטוריה)</string>
@@ -42,7 +43,6 @@
     <string name="restrict_shell">Shell (commands, superuser)</string>
     <string name="restrict_system">מערכת(אפליקציות מוגבלות)</string>
     <string name="restrict_view">גישה לממשק משתמש</string>
-    <string name="title_category">Category to restrict:</string>
     <string name="title_restrict">סמן כדי להגביל</string>
     <string name="settings_lat">Latitude</string>
     <string name="settings_lon">Longitude</string>
