--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -24,6 +24,7 @@
     <string name="msg_restricted" formatted="false">%s limitato da XPrivacy</string>
     <string name="msg_licensed" formatted="false">Licenziato a: %s</string>
     <string name="msg_loading">Caricamento in corso</string>
+    <string name="msg_edit">Click the application icon to edit all restrictions</string>
     <string name="msg_done">Fatto</string>
     <string name="restrict_accounts">Accounts (Google, Facebook, etc)</string>
     <string name="restrict_browser">Browser (bookmarks/history)</string>
@@ -42,7 +43,6 @@
     <string name="restrict_shell">Shell (comandi, superuser)</string>
     <string name="restrict_system">System (applicazioni installate)</string>
     <string name="restrict_view">Visualizzazione (browser)</string>
-    <string name="title_category">Categoria da limitare:</string>
     <string name="title_restrict">Spunta per limitare:</string>
     <string name="settings_lat">Latitudine</string>
     <string name="settings_lon">Longitudine</string>
