--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -24,6 +24,7 @@
     <string name="msg_restricted" formatted="false">%s Restrictionat de XPrivacy</string>
     <string name="msg_licensed" formatted="false">Licentiat pentru: %s</string>
     <string name="msg_loading">Loading</string>
+    <string name="msg_edit">Click the application icon to edit all restrictions</string>
     <string name="msg_done">Done</string>
     <string name="restrict_accounts">Conturi (Google, Facebook, etc)</string>
     <string name="restrict_browser">Browser (semne de carte/istorie)</string>
@@ -42,7 +43,6 @@
     <string name="restrict_shell">Interfata (Shell) (comenzi, superuser)</string>
     <string name="restrict_system">Sistem (aplicatii instalate)</string>
     <string name="restrict_view">Acces browser</string>
-    <string name="title_category">Restrictioneaza categoria:</string>
     <string name="title_restrict">Bifeaza pentru a restrictiona:</string>
     <string name="settings_lat">Latitudine</string>
     <string name="settings_lon">Longitudine</string>
