--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -20,6 +20,7 @@
     <string name="menu_app_launch">Lancer</string>
     <string name="menu_app_settings">Paramètres</string>
     <string name="menu_app_store">Play Store</string>
+    <string name="menu_accounts">Select accounts</string>
     <string name="msg_noupdate">Pas de mise à jour disponible</string>
     <string name="msg_restricted" formatted="false">%s restreint par XPrivacy</string>
     <string name="msg_licensed" formatted="false">Autorisé à: %s</string>
