--- a/res/values-he/strings.xml
+++ b/res/values-he/strings.xml
@@ -20,6 +20,7 @@
     <string name="menu_app_launch">Launch</string>
     <string name="menu_app_settings">Settings</string>
     <string name="menu_app_store">Play Store</string>
+    <string name="menu_accounts">Select accounts</string>
     <string name="msg_noupdate">לא קיימים עדכונים</string>
     <string name="msg_restricted" formatted="false">%s מוגבל על ידי XPrivacy</string>
     <string name="msg_licensed" formatted="false">Licensed to: %s</string>
