--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -20,6 +20,7 @@
     <string name="menu_app_launch">Uitvoeren</string>
     <string name="menu_app_settings">Instellingen</string>
     <string name="menu_app_store">Play Store</string>
+    <string name="menu_accounts">Selecteer accounts</string>
     <string name="msg_noupdate">Geen nieuwe versie beschikbaar</string>
     <string name="msg_restricted" formatted="false">%s beperkt door XPrivacy</string>
     <string name="msg_licensed" formatted="false">Gelicenseerd aan: %s</string>
