--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -26,6 +26,7 @@
     <string name="msg_licensed" formatted="false">Лицензирано на: %s</string>
     <string name="msg_loading">Loading</string>
     <string name="msg_edit">Click the application icon to edit all restrictions</string>
+    <string name="msg_sure">Are you sure?</string>
     <string name="msg_done">Done</string>
     <string name="restrict_accounts">Сметки (Google, Facebook и т.н.)</string>
     <string name="restrict_browser">Браузър (отметки/история)</string>
