--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -26,6 +26,7 @@
     <string name="msg_licensed" formatted="false">Άδεια για: %s</string>
     <string name="msg_loading">Loading</string>
     <string name="msg_edit">Click the application icon to edit all restrictions</string>
+    <string name="msg_sure">Are you sure?</string>
     <string name="msg_done">Done</string>
     <string name="restrict_accounts">Λογαριασμοί (Google, Facebook, κλπ)</string>
     <string name="restrict_browser">Browser (σελιδοδείκτες/ιστορικό)</string>
