--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -26,6 +26,7 @@
     <string name="msg_licensed" formatted="false">Gelicenseerd aan: %s</string>
     <string name="msg_loading">Laden</string>
     <string name="msg_edit">Klik op het applicatie pictogram om alle beperkingen te wijzigen</string>
+    <string name="msg_sure">Zeker weten?</string>
     <string name="msg_done">Done</string>
     <string name="restrict_accounts">Accounts (Google, Facebook, etc)</string>
     <string name="restrict_browser">Browser (bladwijzers/geschiedenis)</string>
