--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -26,6 +26,7 @@
     <string name="msg_licensed" formatted="false">Licencjonowane dla: %s</string>
     <string name="msg_loading">Ładowanie</string>
     <string name="msg_edit">Kliknij na ikonę aplikacji aby zmodyfikować wszystkie ograniczenia</string>
+    <string name="msg_sure">Are you sure?</string>
     <string name="msg_done">Gotowe</string>
     <string name="restrict_accounts">Konta (Google, Facebook, etc)</string>
     <string name="restrict_browser">Przeglądarka (zakładki/historia)</string>
