--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -20,7 +20,7 @@
     <string name="menu_app_launch">Lancia</string>
     <string name="menu_app_settings">Impostazioni</string>
     <string name="menu_app_store">Play Store</string>
-    <string name="menu_accounts">Select accounts</string>
+    <string name="menu_accounts">Select accounts to allow</string>
     <string name="msg_noupdate">Nessun aggiornamento disponibile</string>
     <string name="msg_restricted" formatted="false">%s limitato da XPrivacy</string>
     <string name="msg_licensed" formatted="false">Licenziato a: %s</string>
