--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -20,13 +20,13 @@
     <string name="menu_app_launch">启动</string>
     <string name="menu_app_settings">设置</string>
     <string name="menu_app_store">Play 商店</string>
-    <string name="menu_accounts">Select accounts to allow</string>
+    <string name="menu_accounts">选择允许的帐号</string>
     <string name="msg_noupdate">没有新版本</string>
     <string name="msg_restricted" formatted="false">%s 被 XPrivacy 限制</string>
     <string name="msg_licensed" formatted="false">已授权给: %s</string>
     <string name="msg_loading">加载中</string>
     <string name="msg_edit">点击应用图标修改所有权限</string>
-    <string name="msg_sure">Are you sure?</string>
+    <string name="msg_sure">你确定吗?</string>
     <string name="msg_done">完成</string>
     <string name="restrict_accounts">账户 (Google, Facebook等等)</string>
     <string name="restrict_browser">浏览器 (书签/历史)</string>
