--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -45,6 +45,7 @@
     <string name="restrict_shell">Konzole (příkazy, superuser)</string>
     <string name="restrict_system">Systém (nainstalované aplikace)</string>
     <string name="restrict_view">Zobrazení (v prohlížeči)</string>
+    <string name="title_category">Category:</string>
     <string name="title_restrict">Zaškrtněte pro omezení:</string>
     <string name="settings_lat">Zeměpisná šířka</string>
     <string name="settings_lon">Zeměpisná délka</string>
