--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -45,6 +45,7 @@
     <string name="restrict_shell">Powłoka (polecenia, superuser)</string>
     <string name="restrict_system">System (zainstalowane aplikacje)</string>
     <string name="restrict_view">Widok (przeglądarka)</string>
+    <string name="title_category">Category:</string>
     <string name="title_restrict">Zaznacz aby zablokować:</string>
     <string name="settings_lat">Szerokość geograficzna</string>
     <string name="settings_lon">Długość geograficzna</string>
