--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -45,6 +45,7 @@
     <string name="restrict_shell">Lupina (ukazi, superuser)</string>
     <string name="restrict_system">Sistem (nameščeni programi)</string>
     <string name="restrict_view">Pogled (brskalnik)</string>
+    <string name="title_category">Category:</string>
     <string name="title_restrict">Označi za omejitev pravic:</string>
     <string name="settings_lat">Geografska širina</string>
     <string name="settings_lon">Geografska dolžina</string>
