--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
 
+    <!-- Translators: do not include texts with translatable="false" -->
     <string name="app_name">XPrivacy</string>
     <string name="app_notxposed" formatted="false">Xposed framework version %d+ is not installed</string>
     <string name="app_notenabled">XPrivacy is not enabled in the Xposed installer</string>
@@ -49,6 +50,7 @@
     <string name="restrict_shell">Shell (commands, superuser)</string>
     <string name="restrict_system">System (installed apps)</string>
     <string name="restrict_view">View (browser)</string>
+    <string name="title_category">Category:</string>
     <string name="title_restrict">Check to restrict:</string>
     <string name="settings_lat">Latitude</string>
     <string name="settings_lon">Longitude</string>
