--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -45,6 +45,7 @@
     <string name="restrict_shell">Shell (Kommandos, Superuser)</string>
     <string name="restrict_system">System (installierte Apps)</string>
     <string name="restrict_view">Anzeigen (mittels Browser)</string>
+    <string name="title_category">Category:</string>
     <string name="title_restrict">Markieren zum Einschränken:</string>
     <string name="settings_lat">Breitengrad</string>
     <string name="settings_lon">Längengrad</string>
