--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -45,6 +45,7 @@
     <string name="restrict_shell">Shell (εντολές, superuser)</string>
     <string name="restrict_system">Σύστημα (εγκατεστημένες εφαρμογές)</string>
     <string name="restrict_view">Εμφάνιση (browser)</string>
+    <string name="title_category">Category:</string>
     <string name="title_restrict">Επιλέξτε για περιορισμό:</string>
     <string name="settings_lat">Γεωγρ. πλάτος</string>
     <string name="settings_lon">Γεωγρ. μήκος</string>
