--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -45,6 +45,7 @@
     <string name="restrict_shell">Shell (commandes, root)</string>
     <string name="restrict_system">Système (applis installées)</string>
     <string name="restrict_view">Vue (navigateur)</string>
+    <string name="title_category">Category:</string>
     <string name="title_restrict">Vérifier les restrictions:</string>
     <string name="settings_lat">Latitude</string>
     <string name="settings_lon">Longitude</string>
