--- a/res/values-he/strings.xml
+++ b/res/values-he/strings.xml
@@ -45,6 +45,7 @@
     <string name="restrict_shell">Shell (commands, superuser)</string>
     <string name="restrict_system">מערכת(אפליקציות מוגבלות)</string>
     <string name="restrict_view">גישה לממשק משתמש</string>
+    <string name="title_category">Category:</string>
     <string name="title_restrict">סמן כדי להגביל</string>
     <string name="settings_lat">Latitude</string>
     <string name="settings_lon">Longitude</string>
