--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -45,6 +45,7 @@
     <string name="restrict_shell">Shell (comandi, superuser)</string>
     <string name="restrict_system">System (applicazioni installate)</string>
     <string name="restrict_view">Visualizzazione (browser)</string>
+    <string name="title_category">Category:</string>
     <string name="title_restrict">Spunta per limitare:</string>
     <string name="settings_lat">Latitudine</string>
     <string name="settings_lon">Longitudine</string>
