--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -45,6 +45,7 @@
     <string name="restrict_shell">シェル (コマンド, Superuser)</string>
     <string name="restrict_system">システム (インストール済みアプリ)</string>
     <string name="restrict_view">表示 (ブラウザ)</string>
+    <string name="title_category">Category:</string>
     <string name="title_restrict">チェックで制限:</string>
     <string name="settings_lat">緯度</string>
     <string name="settings_lon">経度</string>
