--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -45,6 +45,7 @@
     <string name="restrict_shell">Kabuk (komutlar, superuser)</string>
     <string name="restrict_system">Sistem (yüklü uygulamalar)</string>
     <string name="restrict_view">Göster (tarayıcı)</string>
+    <string name="title_category">Category:</string>
     <string name="title_restrict">Engellemek için işaretle:</string>
     <string name="settings_lat">Enlem</string>
     <string name="settings_lon">Boylam</string>
