--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -65,6 +65,7 @@
     <string name="settings_iccid" translatable="false">ICC ID</string>
     <string name="settings_subscriber">Subscriber ID</string>
     <string name="settings_fpermission">Filter by permission</string>
+    <string name="settings_fsystem">Filter system applications</string>
     <string name="settings_expert">Expert mode</string>
     <string name="help_application">Application</string>
     <string name="help_internet">has internet permission</string>
