--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -56,6 +56,7 @@
     <string name="settings_country">الدولة</string>
     <string name="settings_subscriber">IMSI</string>
     <string name="settings_fpermission">تصفية بواسطة الأُذونات</string>
+    <string name="settings_fsystem">Filter system applications</string>
     <string name="help_application">التطبيق</string>
     <string name="help_internet">لديه صلاحية الوصول للإنترنت</string>
     <string name="help_granted">لديه صلاحية أندرويد</string>
