--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -55,6 +55,7 @@
     <string name="settings_country">Country</string>
     <string name="settings_subscriber">Subscriber ID</string>
     <string name="settings_fpermission">Filter by permission</string>
+    <string name="settings_fsystem">Filter system applications</string>
     <string name="settings_expert">Режим за експерти</string>
     <string name="help_application">Приложение</string>
     <string name="help_internet">има разрешение за интернет</string>
