--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -55,6 +55,7 @@
     <string name="settings_country">Country</string>
     <string name="settings_subscriber">Subscriber ID</string>
     <string name="settings_fpermission">Filter by permission</string>
+    <string name="settings_fsystem">Filter system applications</string>
     <string name="settings_expert">Expertenmodus</string>
     <string name="help_application">App</string>
     <string name="help_internet">hat Internet Berechtigung</string>
