--- a/res/values-nn-rNO/strings.xml
+++ b/res/values-nn-rNO/strings.xml
@@ -55,6 +55,7 @@
     <string name="settings_country">Land</string>
     <string name="settings_subscriber">Abonnent ID</string>
     <string name="settings_fpermission">Velg etter tillatelse</string>
+    <string name="settings_fsystem">Filter system applications</string>
     <string name="settings_expert">Ekspert modus</string>
     <string name="help_application">Applikasjon</string>
     <string name="help_internet">har internet tillatelse</string>
