--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -55,6 +55,7 @@
     <string name="settings_country">Kraj</string>
     <string name="settings_subscriber">Subscriber ID</string>
     <string name="settings_fpermission">Filtruj według uprawnień</string>
+    <string name="settings_fsystem">Filter system applications</string>
     <string name="settings_expert">Tryb eksperta</string>
     <string name="help_application">Aplikacja</string>
     <string name="help_internet">wymaga dostępu do internetu</string>
