--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -55,6 +55,7 @@
     <string name="settings_country">Country</string>
     <string name="settings_subscriber">Subscriber ID</string>
     <string name="settings_fpermission">Filter by permission</string>
+    <string name="settings_fsystem">Filter system applications</string>
     <string name="settings_expert">Mod Expert</string>
     <string name="help_application">Aplicatie</string>
     <string name="help_internet">are permisiune Internet</string>
