--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -55,6 +55,7 @@
     <string name="settings_country">Country</string>
     <string name="settings_subscriber">Subscriber ID</string>
     <string name="settings_fpermission">Filter by permission</string>
+    <string name="settings_fsystem">Filter system applications</string>
     <string name="settings_expert">Расширенный режим</string>
     <string name="help_application">Приложение</string>
     <string name="help_internet">запрашивает доступ в интернет</string>
