--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -55,6 +55,7 @@
     <string name="settings_country">Država</string>
     <string name="settings_subscriber">ID naročnika</string>
     <string name="settings_fpermission">Filtriraj po pravicah</string>
+    <string name="settings_fsystem">Filter system applications</string>
     <string name="settings_expert">Napredni način</string>
     <string name="help_application">Program</string>
     <string name="help_internet">uporablja internetne pravice</string>
