--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -9,6 +9,7 @@
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
     <string name="app_info">Info: https://github.com/M66B/XPrivacy/</string>
     <string name="menu_settings">Nastavení</string>
+    <string name="menu_template">Template</string>
     <string name="menu_update">Zkontrolovat aktualizace</string>
     <string name="menu_report">Nahlásit problém</string>
     <string name="menu_export">Export</string>
