--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -9,6 +9,7 @@
     <string name="app_copyright">Copyright © 2013 por M. Bokhorst (M66B)</string>
     <string name="app_info">Info: https://github.com/M66B/XPrivacy/</string>
     <string name="menu_settings">Configuración</string>
+    <string name="menu_template">Template</string>
     <string name="menu_update">Buscar actualizaciones</string>
     <string name="menu_report">Reportar problema</string>
     <string name="menu_export">Exportar</string>
