--- a/res/values-he/strings.xml
+++ b/res/values-he/strings.xml
@@ -9,6 +9,7 @@
     <string name="app_copyright">זכויות יוצרים \u00A9 2013 by M. Bokhorst (M66B)</string>
     <string name="app_info">פרטים: https://github.com/M66B/XPrivacy/</string>
     <string name="menu_settings">הגדרות</string>
+    <string name="menu_template">Template</string>
     <string name="menu_update">בדוק עדכונים</string>
     <string name="menu_report">דווח על תקלה</string>
     <string name="menu_export">ייצא</string>
