--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -9,6 +9,7 @@
     <string name="app_copyright">Copyright \u00A9 2013 M. Bokhorst (M66B)</string>
     <string name="app_info">Info: https://github.com/M66B/XPrivacy/</string>
     <string name="menu_settings">Beállítások</string>
+    <string name="menu_template">Template</string>
     <string name="menu_update">Frissítés keresése</string>
     <string name="menu_report">Probléma bejelentése</string>
     <string name="menu_export">Exportálás</string>
