--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -9,6 +9,7 @@
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
     <string name="app_info">詳細: https://github.com/M66B/XPrivacy/</string>
     <string name="menu_settings">設定</string>
+    <string name="menu_template">Template</string>
     <string name="menu_update">更新を確認</string>
     <string name="menu_report">問題を報告</string>
     <string name="menu_export">エクスポート</string>
