--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -9,6 +9,7 @@
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
     <string name="app_info">Info: https://github.com/M66B/XPrivacy/</string>
     <string name="menu_settings">Instellingen</string>
+    <string name="menu_template">Sjabloon</string>
     <string name="menu_update">Controleer op nieuwe versie</string>
     <string name="menu_report">Rapporteer probleem</string>
     <string name="menu_export">Exporteren</string>
