--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -9,6 +9,7 @@
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
     <string name="app_info">Info: https://github.com/M66B/XPrivacy/</string>
     <string name="menu_settings">Ustawienia</string>
+    <string name="menu_template">Template</string>
     <string name="menu_update">Sprawdź aktualizacje</string>
     <string name="menu_report">Zgłoś problem</string>
     <string name="menu_export">Eksport</string>
