--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -9,6 +9,7 @@
     <string name="app_copyright">Drepturi de autor rezervate \u00A9 2013 M. Bokhorst (M66B)</string>
     <string name="app_info">Informatii suplimentare: https://github.com/M66B/XPrivacy/</string>
     <string name="menu_settings">Setari</string>
+    <string name="menu_template">Template</string>
     <string name="menu_update">Cauta update</string>
     <string name="menu_report">Raporteaza o problema</string>
     <string name="menu_export">Exporta</string>
