--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -9,6 +9,7 @@
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
     <string name="app_info">Подробнее о программе: https://github.com/M66B/XPrivacy/</string>
     <string name="menu_settings">Параметры</string>
+    <string name="menu_template">Template</string>
     <string name="menu_update">Проверить обновления</string>
     <string name="menu_report">Сообщить об ошибке</string>
     <string name="menu_export">Экспорт настроек</string>
