--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -9,6 +9,7 @@
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
     <string name="app_info">Informácie: https://github.com/M66B/XPrivacy/</string>
     <string name="menu_settings">Nastavenia</string>
+    <string name="menu_template">Template</string>
     <string name="menu_update">Aktualizovať</string>
     <string name="menu_report">Nahlásiť problém</string>
     <string name="menu_export">Exportovať</string>
