--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -9,6 +9,7 @@
     <string name="app_copyright">Telif hakkı \u00A9 2013, M. Bokhorst (M66B)</string>
     <string name="app_info">Bilgi(İngilizce): https://github.com/M66B/XPrivacy/</string>
     <string name="menu_settings">Ayarlar</string>
+    <string name="menu_template">Template</string>
     <string name="menu_update">Güncelleştirme Ara</string>
     <string name="menu_report">Problem Bildir</string>
     <string name="menu_export">Ayarları dışa aktar</string>
