--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -9,6 +9,7 @@
     <string name="app_copyright">版权所有 \u00A9 2013 M. Bokhorst (M66B)</string>
     <string name="app_info">信息: https://github.com/M66B/XPrivacy/</string>
     <string name="menu_settings">设置</string>
+    <string name="menu_template">Template</string>
     <string name="menu_update">检查更新</string>
     <string name="menu_report">报告问题</string>
     <string name="menu_export">导出配置</string>
