--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -22,6 +22,7 @@
     <string name="menu_app_settings">إعدادات التطبيق</string>
     <string name="menu_app_store">متجر قوقل</string>
     <string name="menu_accounts">Select accounts to allow</string>
+    <string name="menu_contacts">Select contacts to allow</string>
     <string name="msg_noupdate">لا توجد تحديثات متاحة</string>
     <string name="msg_restricted" formatted="false">%s تم تقيده بواسطة XPrivacy</string>
     <string name="msg_licensed" formatted="false">مرخص ل: %s</string>
