--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -22,6 +22,7 @@
     <string name="menu_app_settings">Nastavení</string>
     <string name="menu_app_store">Obchod Play</string>
     <string name="menu_accounts">Select accounts to allow</string>
+    <string name="menu_contacts">Select contacts to allow</string>
     <string name="msg_noupdate">Není k dispozici žádná aktualizace</string>
     <string name="msg_restricted" formatted="false">XPrivacy omezilo %s</string>
     <string name="msg_licensed" formatted="false">Licencováno na: %s</string>
