--- a/res/values-no-rNO/strings.xml
+++ b/res/values-no-rNO/strings.xml
@@ -22,6 +22,7 @@
     <string name="menu_app_settings">Instillinger</string>
     <string name="menu_app_store">Play Store</string>
     <string name="menu_accounts">Ingen oppdatering finnes</string>
+    <string name="menu_contacts">Select contacts to allow</string>
     <string name="msg_noupdate">No update available</string>
     <string name="msg_restricted" formatted="false">%s blokkert av XPrivacy</string>
     <string name="msg_licensed" formatted="false">Lisensert til: %s</string>
