--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -22,6 +22,7 @@
     <string name="menu_app_settings">Settings</string>
     <string name="menu_app_store">Play Store</string>
     <string name="menu_accounts">Select accounts to allow</string>
+    <string name="menu_contacts">Select contacts to allow</string>
     <string name="msg_noupdate">Niciun update disponibil</string>
     <string name="msg_restricted" formatted="false">%s Restrictionat de XPrivacy</string>
     <string name="msg_licensed" formatted="false">Licentiat pentru: %s</string>
