--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -22,6 +22,7 @@
     <string name="menu_app_settings">Настройки приложения</string>
     <string name="menu_app_store">Play Маркет</string>
     <string name="menu_accounts">Select accounts to allow</string>
+    <string name="menu_contacts">Select contacts to allow</string>
     <string name="msg_noupdate">Обновлений нет</string>
     <string name="msg_restricted" formatted="false">%s запрещено XPrivacy</string>
     <string name="msg_licensed" formatted="false">Владелец лицензии: %s</string>
