--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -22,6 +22,7 @@
     <string name="menu_app_settings">Ayarlar</string>
     <string name="menu_app_store">Play Store</string>
     <string name="menu_accounts">İzin verilecek hesapları seç</string>
+    <string name="menu_contacts">Select contacts to allow</string>
     <string name="msg_noupdate">Güncelleştirme yok</string>
     <string name="msg_restricted" formatted="false">%s XPrivacy tarafından engellendi</string>
     <string name="msg_licensed" formatted="false">%s adına lisanslıdır.</string>
