--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -22,6 +22,7 @@
     <string name="menu_app_settings">设置</string>
     <string name="menu_app_store">Play 商店</string>
     <string name="menu_accounts">选择允许的帐号</string>
+    <string name="menu_contacts">Select contacts to allow</string>
     <string name="msg_noupdate">没有新版本</string>
     <string name="msg_restricted" formatted="false">%s 被 XPrivacy 限制</string>
     <string name="msg_licensed" formatted="false">已授权给: %s</string>
